<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app   ="http://schemas.android.com/apk/res-auto"
    xmlns:tools ="http://schemas.android.com/tools"
    android:background="@drawable/bg_pastel_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/socialCategoriesTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/social_categories"
            app:tabMode="scrollable"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contactsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:contentDescription="@string/contacts_list"/>

        <LinearLayout
            android:id="@+id/emptyStateLayout"
            android:visibility="gone"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/social"
                app:tint="@null"
                android:contentDescription="@string/no_contacts"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_contacts"
                android:textColor="#888888"
                android:textSize="18sp"/>
        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_contact"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="ImageContrast"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


